--- a/Linear Equations Solver/Simple and real/task-info.yaml
+++ b/Linear Equations Solver/Simple and real/task-info.yaml
@@ -71,5 +71,5 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/40/stages/209/implement
-status: Unchecked
+status: Solved
 record: -1
