--- a/Linear Equations Solver/X and Y/task-info.yaml
+++ b/Linear Equations Solver/X and Y/task-info.yaml
@@ -91,5 +91,5 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/40/stages/210/implement
-status: Unchecked
+status: Solved
 record: -1
